# varbit

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: animal.rs  flash.rs  handler.rs  kafka.rs  lib.rs  task.rs
conf/: Cargo.toml
conf/src/: app.rs  lib.rs
example/etc/: config.toml  docker-compose.yaml
migrations/: verb.sql
pubg/: Cargo.toml
pubg/src/: core.rs  lib.rs  task.rs
pubg/src/input/: kafka.rs  mod.rs
pubg/src/sink/: kafka.rs  mod.rs
schema/: Cargo.toml
schema/src/: lib.rs  task.rs
service/: Cargo.toml
service/src/: lib.rs  task.rs
src/: main.rs
vlog/: Cargo.toml
vlog/src/: lib.rs
