[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conf = { path = "../conf" }
service = { path = "../service" }

log = "0.4.20"
tokio-context = { version = "0.1.3" }
anyhow = { version = "1.0.75", features = ["default"] }
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.189", features = ["default"] }
serde_json = { version = "1.0.107", features = ["default"] }
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-rustls",
    "mysql",
    "chrono",
    "json",
    "rust_decimal",
] }

axum-core = "0.3.4"
tracing = "0.1.37"
axum = { version = "0.6.20", features = ["default"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.4.4", features = [
    "default",
    "trace",
    "cors",
    "full",
] }
tower = { version = "0.4.13", features = ["full"] }
chrono = { version = "0.4.19",features = ["serde"] }
lazy_static ={ version = "*"}
